k8s/demo_ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
  - host: web01.example.com
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
  - host: web02.example.com
    http:
      paths:
      - backend:
          serviceName: echo2
          servicePort: 80
